<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myfreepal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_new"
        android:name="com.example.myfreepal.ui.dashboard.NewFragment"
        android:label="@string/title_new"
        tools:layout="@layout/fragment_new" >
        <action
            android:id="@+id/action_navigation_new_to_navigation_add_exercise"
            app:destination="@id/navigation_add_exercise" />
        <action
            android:id="@+id/action_navigation_new_to_navigation_add_workout"
            app:destination="@id/navigation_add_workout" />
        <action
            android:id="@+id/action_navigation_new_to_navigation_add_weight"
            app:destination="@id/navigation_add_weight" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_exercise"
        android:name="com.example.myfreepal.ui.dashboard.AddExerciseFragment"
        android:label="@string/button_add_exercise"
        tools:layout="@layout/fragment_add_exercise" >
        <action
            android:id="@+id/action_navigation_add_exercise_to_navigation_new"
            app:destination="@id/navigation_new" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_weight"
        android:name="com.example.myfreepal.ui.dashboard.AddWeightFragment"
        android:label="@string/button_add_weight"
        tools:layout="@layout/fragment_add_weight" >
        <action
            android:id="@+id/action_navigation_add_weight_to_navigation_new"
            app:destination="@id/navigation_new" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_workout"
        android:name="com.example.myfreepal.ui.dashboard.AddWorkoutFragment"
        android:label="@string/button_add_workout"
        tools:layout="@layout/fragment_add_workout" >
        <action
            android:id="@+id/action_navigation_add_workout_to_navigation_new"
            app:destination="@id/navigation_new" />
    </fragment>


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myfreepal.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_profile_edit"
            app:destination="@id/navigation_profile_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_edit"
        android:name="com.example.myfreepal.ui.profile.ProfileEditFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_profile_edit">
        <action
            android:id="@+id/action_navigation_profile_edit_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>